feat: get user profile created
